fix: Increase spacing between "labelled" `H2`s and their text-column

--- a/src/scss/LabeledTextBlock.scss
+++ b/src/scss/LabeledTextBlock.scss
@@ -37,12 +37,12 @@
 	}
 
 	.LabeledTextBlock__label {
-		width: cols_pct(6);
-		--dash-width: #{cols_pct(1, 0, 5)};
-		--dash-margin: #{cols_pct(0, 1, 5)};
+		width: cols_pct(5, 6);
+		--dash-width: #{cols_pct(1, 0, 5, 6)};
+		--dash-margin: #{cols_pct(0, 1, 5, 6)};
 	}
 	.LabeledTextBlock--wide > .LabeledTextBlock__label {
-		width: cols_pct(5);
+		width: cols_pct(4, 4);
 		@include LabeledTitleStyle--outdented();
 	}
 
