--- a/src/scss/TextBlock.scss
+++ b/src/scss/TextBlock.scss
@@ -42,7 +42,7 @@
 			@include LabeledTitleStyle--outdented();
 			height: 0;
 			margin-left: cols_pct(-5, -5, 7);
-			padding-right: cols_pct(7, 7, 7);
+			padding-right: cols_pct(8, 7, 7);
 		}
 	}
 
